--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "angular": "^1.5.0",
     "angular-sanitize": "^1.5.3",
     "angular-ui-router": "^0.3.1",
-    "bootstrap": "^3.3.6",
     "font-awesome": "^4.6.1"
   },
   "devDependencies": {
@@ -39,6 +38,7 @@
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "bootstrap-sass": "^3.3.7",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.0",
     "eslint": "^2.8.0",
@@ -69,6 +69,7 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.2.0",
+    "sass-resources-loader": "^1.1.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.13",
